--- a/src/app/c_bus/tab-inicio/tab-inicio.page.html
+++ b/src/app/c_bus/tab-inicio/tab-inicio.page.html
@@ -17,9 +17,14 @@
     <h4>Novedades {{fecha}}</h4>
   </ion-card>
   
-  <!-- <ion-searchbar class="ion-padding" placeholder="Buscar" showCancelButton="never"></ion-searchbar> -->
-  <ion-card style="width: 97%; height: 575px;">
+  
+  <!-- <ion-card style="width: 97%; height: 575px;">
     <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
-  </ion-card>
+  </ion-card> -->
+  <div class="center">
+    <ion-card style="width: 282px; height: 410px">
+      <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
+    </ion-card>
+  </div>
   
 </ion-content>
