--- a/src/app/c_privado/geolocalizacion-llegada/geolocalizacion-llegada.page.html
+++ b/src/app/c_privado/geolocalizacion-llegada/geolocalizacion-llegada.page.html
@@ -19,12 +19,18 @@
       </div>
     </div>
   </div>
-  <!-- <ion-item-divider style="text-align: center; color: black;">
-    <h4>Indica en el mapa la ubicación de llegada</h4>
-  </ion-item-divider> -->
+<!-- 
   <ion-card style="width: 97%; height: 80%;">
     <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
   </ion-card>
-  <ion-button (click)="registrarLlegada()" class="ion-padding boton-azul" expand="block">  &nbsp; &nbsp;Continuar</ion-button>
-  
+  <ion-button (click)="registrarLlegada()" class="ion-padding boton-azul" expand="block">  &nbsp; &nbsp;Continuar</ion-button> -->
+  <div class="center">
+    <ion-card style="width: 282px; height: 410px">
+      <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
+    </ion-card>
+  </div>
+
+  <div class="btn-ordenar">
+    <ion-button class="boton-warmi-in" (click)="registrarLlegada()">Continuar</ion-button>
+  </div>
 </ion-content>
