--- a/src/app/c_privado/menu/menu.page.html
+++ b/src/app/c_privado/menu/menu.page.html
@@ -1,23 +1,31 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="inicio">
-      <ion-icon name="home"></ion-icon>
-      <ion-label>Inicio</ion-label>
+      <!-- <ion-icon name="home"></ion-icon>
+      <ion-label>Inicio</ion-label> -->
+      <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Inicio</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="ordenes">
-      <ion-icon name="nutrition-outline"></ion-icon>
-      <ion-label>Ordenes</ion-label>
+      <!-- <ion-icon name="nutrition-outline"></ion-icon>
+      <ion-label>Ordenes</ion-label> -->
+      <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Ordenes</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="novedades">
-      <ion-icon name="globe-outline"></ion-icon>
-      <ion-label>Noticias</ion-label>
+      <!-- <ion-icon name="globe-outline"></ion-icon>
+      <ion-label>Noticias</ion-label> -->
+      <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Noticias</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="planificacion">
-      <ion-icon name="list-circle-outline"></ion-icon>
-      <ion-label>Planificación</ion-label>
+      <!-- <ion-icon name="list-circle-outline"></ion-icon>
+      <ion-label>Planificación</ion-label> -->
+      <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Planificación</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
