--- a/src/app/c_privado/tab_noticias/novedades/novedades.page.scss
+++ b/src/app/c_privado/tab_noticias/novedades/novedades.page.scss
@@ -11,3 +11,9 @@ capacitor-google-maps {
     --background: #DBF8DE;
     text-align: center;
     }
+
+    .titulo-fondo{
+      background: var(--warmin-color-brown);
+      color: #fff;
+      text-align: center;
+      }
