--- a/src/app/c_camioneta/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/c_camioneta/geolocalizacion/geolocalizacion.page.html
@@ -14,13 +14,19 @@
       </div>
     </div>
   </div>
-  <!-- <ion-item-divider style="text-align: center; color: black;">
-  <h4>Indica en el mapa la ubicación de la asociación</h4>
-</ion-item-divider> -->
-  <ion-card style="width: 97%; height: 80%;">
+  <!-- <ion-card style="width: 97%; height: 80%;">
     <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
-  </ion-card>
+  </ion-card> -->
+  
+  <div class="center">
+    <ion-card style="width: 282px; height: 410px">
+      <app-googlemaps [localizacion]="localizacion" (enviar)="recibirData($event)" [feature]="feature"></app-googlemaps>
+    </ion-card>
+  </div>
+
+  <div class="btn-ordenar">
   <ion-button class="boton-warmi-in" id="open-modal" expand="block">Continuar</ion-button>
+</div>
   
   <!-- Modal -->
 
@@ -50,24 +56,24 @@
         <ion-list>
           <ion-card>  
             <ion-item>
-              <ion-label position="stacked">Placa:</ion-label>
+              <ion-label position="stacked" style="color: var(warmis-color-purple);">Placa:</ion-label>
               <ion-input [(ngModel)]="car_plate" name="car_plate"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="stacked">Descripción:</ion-label>
+              <ion-label position="stacked" class="text-color-purple">Descripción:</ion-label>
               <ion-input [(ngModel)]="description" name="description"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="stacked">Color:</ion-label>
+              <ion-label position="stacked"class="text-color-purple">Color:</ion-label>
               <ion-input [(ngModel)]="color" name="color"></ion-input>
             </ion-item>
         
           </ion-card>
 
         </ion-list>   
-
-          <ion-button type="submit" expand="block" class="boton-warmi-in" (click)="guardarCamioneta()"><ion-icon name="card-outline"></ion-icon> &nbsp; &nbsp;Guardar</ion-button>
-        
+        <div class="btn-ordenar">
+          <ion-button type="submit" class="boton-warmi-in" (click)="guardarCamioneta()"><ion-icon name="card-outline"></ion-icon>Guardar</ion-button>
+        </div>
       </form>
       </ion-content>
     </ng-template>
