--- a/src/app/c_camioneta/geolocalizacion/geolocalizacion.page.scss
+++ b/src/app/c_camioneta/geolocalizacion/geolocalizacion.page.scss
@@ -1,9 +1,10 @@
-capacitor-google-maps {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-.map{
-    height: 70%;
-    width: 95%;
-}
+// capacitor-google-maps {
+//     display: inline-block;
+//     width: 100%;
+//     height: 100%;
+//   }
+// .map{
+//     height: 70%;
+//     width: 95%;
+// }
+
