--- a/src/app/c_camioneta/menu/menu.page.html
+++ b/src/app/c_camioneta/menu/menu.page.html
@@ -1,8 +1,8 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="inicio">
-      <ion-icon name="home"></ion-icon>
-      <ion-label>Inicio</ion-label>
+      <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
+      <ion-label class="text-color-purple text-bold">Inicio</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
