--- a/src/app/c_camioneta/tab-inicio/tab-inicio.page.scss
+++ b/src/app/c_camioneta/tab-inicio/tab-inicio.page.scss
@@ -1,7 +1,7 @@
-.titulo-fondo{
-    --background: #DBF8DE;
-    text-align: center;
-    }
+// .titulo-fondo{
+//     --background: #DBF8DE;
+//     text-align: center;
+//     }
     capacitor-google-maps {
         display: inline-block;
         width: 100%;
@@ -10,4 +10,9 @@
     .map{
         height: 75%;
         width: 95%;
+    }
+.titulo-fondo{
+    background: var(--warmin-color-brown);
+    color: #fff;
+    text-align: center;
     }
