--- a/src/app/c_privado/geolocalizacion-salida/geolocalizacion-salida.page.html
+++ b/src/app/c_privado/geolocalizacion-salida/geolocalizacion-salida.page.html
@@ -13,12 +13,18 @@
       </div>
     </div>
   </div>
-  <!-- <ion-item-divider style="text-align: center; color: black;">
-    <h4>Indica en el mapa la ubicación de salida</h4>
-  </ion-item-divider> -->
-  <ion-card style="width: 97%; height: 80%;">
+
+  <!-- <ion-card style="width: 97%; height: 80%;">
     <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
-  </ion-card>
-  <ion-button class="ion-padding boton-azul" expand="block" (click)="registrarSalida()">  &nbsp; &nbsp;Continuar</ion-button>
-  
+  </ion-card> -->
+  <div class="center">
+    <ion-card style="width: 282px; height: 410px">
+      <app-googlemaps [localizacion]="localizacion" [feature]="feature" (enviar)="recibirData($event)"></app-googlemaps>
+    </ion-card>
+  </div>
+
+  <div class="btn-ordenar">
+    <ion-button class="boton-warmi-in" (click)="registrarSalida()">Continuar</ion-button>
+  </div>
+
 </ion-content>
