--- a/src/app/c_privado/tab_inicio/inicio/inicio.page.html
+++ b/src/app/c_privado/tab_inicio/inicio/inicio.page.html
@@ -13,7 +13,12 @@
       <div class="texto-header">Movilidad de la vendedora</div>
     </div>
   </div>
-  <ion-card style="width: 95%; height: 70%;">
+  <!-- <ion-card style="width: 95%; height: 70%;">
     <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
-  </ion-card>
+  </ion-card> -->
+  <div class="center">
+    <ion-card style="width: 282px; height: 410px">
+      <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
+    </ion-card>
+  </div>
 </ion-content>
