--- a/src/app/c_privado/tab_inicio/inicio/inicio.page.scss
+++ b/src/app/c_privado/tab_inicio/inicio/inicio.page.scss
@@ -1,9 +1,9 @@
-capacitor-google-maps {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-.map{
-    height: 75%;
-    width: 95%;
-}
+// capacitor-google-maps {
+//     display: inline-block;
+//     width: 100%;
+//     height: 100%;
+//   }
+// .map{
+//     height: 75%;
+//     width: 95%;
+// }
