--- a/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.html
+++ b/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.html
@@ -8,11 +8,17 @@
     </div>
   </div>
   <!--Search Bar  -->
-  <div class="container-search-bar padding-bar">
+  <!-- <div class="container-search-bar padding-bar">
     <div class="">
       <ion-searchbar placeholder="Buscar" class="search-bar-orange" showCancelButton="never"></ion-searchbar>
     </div>
+  </div> -->
+  <div class="contenedor-busqueda">
+    <div class="search">
+      <ion-searchbar class="busqueda" placeholder="Buscar ..."  showCancelButton="never"></ion-searchbar>
+    </div>    
   </div>
+
   <!-- Lista Personas -->
   <div class="contenedor-personas">
     <div *ngFor="let farmer of listFarmers" class="card" [routerLink]="['/consumidor/tab-inicial/perfil-ma',farmer.id]">
