--- a/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.html
+++ b/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.html
@@ -19,9 +19,9 @@
   <div class="datos-personales">
     <div class="imagen-buttom">
       <img class="img-profile" src="{{foto || 'assets/img/comprador.jpg'}}" />
-      <a class="imagen-in-buttom" href="http://">
+      <!-- <a class="imagen-in-buttom" href="http://">
         <ion-icon slot="start" src="assets/iconos/camera.svg" class="size-icon-camera"></ion-icon>
-      </a>
+      </a> -->
     </div>
     <div>
       <ion-card-header>
@@ -45,24 +45,37 @@
     <div>
       <div class="ion-text-left text-bold text-color-brown">Calificación</div>
       <div>
-        <form [formGroup]="form">
+        <!-- <form [formGroup]="form">
           <div class="cont">
             <div class="stars">
               <ngx-star-rating formControlName="rating" [id]="'rating'" [disabled]="true"></ngx-star-rating>
             </div>
           </div>
-        </form>
+        </form> -->
+        <div class="contenedor-valoracion">
+          <!-- <div class="calificación text-bold text-color-brown">Calificación</div> -->
+          <div class="lechugas">
+            <div style="margin-right: 6px;"><ion-icon class="size-lechuga" slot="start" src="../../../../assets/iconos/lechuga.svg"></ion-icon></div>    
+            <div style="margin-right: 6px;"><ion-icon class="size-lechuga" slot="start" src="../../../../assets/iconos/lechuga.svg"></ion-icon></div>
+            <div style="margin-right: 6px;"><ion-icon class="size-lechuga" slot="start" src="../../../../assets/iconos/lechuga.svg"></ion-icon></div>
+            <div style="margin-right: 6px;"><ion-icon class="size-lechuga" slot="start" src="../../../../assets/iconos/lechuga.svg"></ion-icon></div>
+            <div style="margin-right: 6px;"><ion-icon class="size-lechuga" slot="start" src="../../../../assets/iconos/lechuga.svg"></ion-icon></div>
+          </div>      
+          <div class="valoracion text-bold text-white">4.5</div>
+        </div>
       </div>
     </div>
   </div>
-  <!--  -->
-  <ion-card style="width: 98%; height: 30%;">
-    <app-googlemaps [buscador]="buscador" [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
-  </ion-card>
+
+  <div class="center">
+    <ion-card style="width: 282px; height: 410px">
+      <app-googlemaps [buscador]="buscador" [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
+    </ion-card>
+  </div>
+
 
   <div class="contenedor-list-ventas" id="contenedor-list-ventas">
     <ion-card class="contenedor-card-p">
-      <!-- <ion-card *ngFor="let product of products" class="contenedor-card-p"> -->
       <ion-card-header class="encabezado-card">
         <ion-card-title class="text-white text-bold">Horario</ion-card-title>
       </ion-card-header>
@@ -72,11 +85,7 @@
       </ion-card-content>
     </ion-card>
   </div>
-  <!-- 
-  <ion-card class="ion-padding">
-    <ion-card-title>08:00 -- 17:00</ion-card-title>
-    <ion-card-subtitle>Lunes, martes, jueves</ion-card-subtitle>
-  </ion-card> -->
+
   <div class="btn-ordenar">
     <ion-button class="boton-warmi-in" [routerLink]="['/consumidor/tab-inicial/productos', id]">Ver productos
     </ion-button>
