--- a/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.scss
+++ b/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.scss
@@ -40,6 +40,7 @@
   padding-top: 10px;
   width: 100%;  
   min-width: 100%;   
+  height: 100px;
 }
 
 .img-profile {
@@ -95,19 +96,36 @@ div.stars {
   display: inline-block;
 }
 
-capacitor-google-maps {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-}
+// capacitor-google-maps {
+//   display: inline-block;
+//   width: 100%;
+//   height: 100%;
+// }
 
-.map {
-  height: 35%;
-  width: 95%;
-}
+// .map {
+//   height: 35%;
+//   width: 95%;
+// }
 
 .btn-ordenar{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.lechugas {
+  width: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.size-lechuga {
+  width: 25px;
+  height: 25px;
+}
+
+.size-lechuga:hover {
+  width: 29px;
+  height: 29px;
 }
