--- a/src/app/consumidor/tab_inicio/inicio/inicio.page.html
+++ b/src/app/consumidor/tab_inicio/inicio/inicio.page.html
@@ -42,7 +42,13 @@
     <!-- </ion-row> -->
   </div>
 
-  <ion-card style="width: 95%; height: 70%;">
+  <!-- <ion-card style="width: 95%; height: 70%;">
     <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
-  </ion-card>
+  </ion-card> -->
+
+  <div class="center">
+    <ion-card style="width: 282px; height: 410px">
+      <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
+    </ion-card>
+  </div>
 </ion-content>
